Project

General

Profile

Actions

Bug #41424

closed

readable.sh test fails

Added by Kefu Chai over 4 years ago. Updated about 4 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
Correctness/Safety
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
nautilus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

```
104: **** failed to decode /var/ssd/ceph/ceph-object-corpus/archive/15.0.0-539-g191ab33faf/objects/ServiceMap::Service/08800c908429da57f2b09b5cc8463080 ****
104: error: buffer::malformed_input: void entity_addr_t::decode(ceph::buffer::v14_2_0::list::const_iterator&) no longer understand old encoding version 1 < 28
104: error: buffer::malformed_input: void entity_addr_t::decode(ceph::buffer::v14_2_0::list::const_iterator&) no longer understand old encoding version 1 < 28
104: **** failed to decode /var/ssd/ceph/ceph-object-corpus/archive/15.0.0-539-g191ab33faf/objects/ServiceMap/074825661e8e8a3fbcb1705c109ad5db ****
104: error: buffer::malformed_input: void entity_addr_t::decode(ceph::buffer::v14_2_0::list::const_iterator&) no longer understand old encoding version 1 < 28
104: error: buffer::malformed_input: void entity_addr_t::decode(ceph::buffer::v14_2_0::list::const_iterator&) no longer understand old encoding version 1 < 28
104: error: buffer::malformed_input: void entity_addr_t::decode(ceph::buffer::v14_2_0::list::const_iterator&) no longer understand old encoding version 1 < 28

caused by https://github.com/ceph/ceph/pull/28855 , where ServiceMap::Daemon::gid is changed from uint64_t to boost::optional<uint64_t>.


Related issues 1 (0 open1 closed)

Copied to RADOS - Backport #42168: nautilus: readable.sh test failsResolvedVenky ShankarActions
Actions #1

Updated by Kefu Chai over 4 years ago

  • Category set to Correctness/Safety
  • Assignee set to Venky Shankar
Actions #2

Updated by Kefu Chai over 4 years ago

  • Assignee changed from Venky Shankar to Kefu Chai
Actions #3

Updated by Kefu Chai over 4 years ago

  • Status changed from New to Fix Under Review
  • Pull request ID set to 32281
Actions #4

Updated by Kefu Chai over 4 years ago

  • Pull request ID changed from 32281 to 29862
Actions #5

Updated by Kefu Chai over 4 years ago

  • Status changed from Fix Under Review to Resolved
Actions #6

Updated by Venky Shankar over 4 years ago

Actions #7

Updated by Venky Shankar over 4 years ago

  • Status changed from Resolved to Pending Backport
  • Backport set to nautilus
Actions #9

Updated by Nathan Cutler about 4 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF